--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,21 +19,21 @@ layout: base
   <div class="usa-grid main-content">
  <div class="usa-grid">
     <div class="usa-width-one-fourth">
-      <h3><center>$8M+ in cost savings and revenue in less than 15 months</center></h3>
+      <h3><center>Achieved $8M+ in cost savings and revenue in less than 15 months</center></h3>
       <br/><br/>
       <p><center><img src="{{ '/assets/img/icons/example1.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
    </div>
     <div class="usa-width-one-fourth">
-      <h3><center>More than 20,000 new active duty servicemember retirement savings plan enrollees</center></h3>
+      <h3><center>Enabled more than 20,000 new active duty Servicemember retirement savings plan enrollees</center></h3>
        <p><center><img src="{{ '/assets/img/icons/example2.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
     </div>
     <div class="usa-width-one-fourth">
-      <h3><center>Half a million vaccine uptake communications tested</center></h3>
+      <h3><center>Informing effective low-cost mechanisms by testing more than half a million vaccine uptake communications</center></h3>
       <br/>
      <p><center><img src="{{ '/assets/img/icons/example3.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
     </div>
     <div class="usa-width-one-fourth">
-      <h3><center>6% increase in college enrollment</center></h3>
+      <h3><center>Text reminders increased college enrollment by 6%</center></h3>
       <br/><br/>
       <p><center><img src="{{ '/assets/img/icons/example4.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
     </div>
