Adds `margin` declaration to `billboard` class
* Centers text in billboard

--- a/_sass/components/_billboard.scss
+++ b/_sass/components/_billboard.scss
@@ -25,6 +25,7 @@
   font-weight: $font-bold;
   letter-spacing: $display-kerning;
   line-height: $heading-line-height;
+  margin: 0 auto;
   max-width: 720px;
 
   p {
