--- a/_layouts/methods.html
+++ b/_layouts/methods.html
@@ -52,8 +52,8 @@ layout: base
       <h3>Step 3: Embed tests using randomized evaluations</h3>
         <p>"Tests" to OES are opportunities to truly learn what works - and are grounded in scientific methods.</p> 
             <p>- Whenever possible, we aim to <a href="https://oes.gsa.gov/methodsdeepdive">randomly assign</a> individuals or groups to a treatment condition. This is what enables us to conclude that improvements in outcomes were actually caused by the program change(s) that we tested.</p> 
-            <p>- In designing evaluations, we give particular attention to <a href="https://oes.gsa.gov/methodsdeepdive">statistical power</a>. Briefly, statistical power is a study’s ability to correctly detect whether a program improvement was effective (assuming that it was indeed effective).</p> 
-            <p>- Finally, one of the most important steps we take is committing to a detailed <a href="https://oes.gsa.gov/methodsdeepdive">analysis plan</a> before we begin working with data. As the recent replication crisis in the social sciences has shown, if scientists allow themselves too much flexibility in analyzing data they may inadvertently get results that are the result of “fishing” or “p-hacking.”</p> 
+            <p>- In designing tests, we give particular attention to <a href="https://oes.gsa.gov/methodsdeepdive">statistical power</a>. Briefly, statistical power is a study’s ability to correctly detect whether a program improvement was effective (assuming that it was indeed effective).</p> 
+            <p>- Finally, one of the most important steps we take is committing to a detailed <a href="https://oes.gsa.gov/methodsdeepdive">analysis plan</a> before we begin working with data. As the recent replication crisis in the social sciences has shown, if scientists allow themselves too much flexibility in analyzing data they may inadvertently detect effects that are the result of “fishing” or “p-hacking.”</p> 
         <p><a href="{{ '/assets/files/AnalysisPlan.pdf' | prepend: site.baseurl }}">Analysis Plan Document</a></p>
    </div>
   </div>
