--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,12 +28,12 @@ layout: base
        <p><center><img src="{{ '/assets/img/icons/example2.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
     </div>
     <div class="usa-width-one-fourth">
-      <h3><center>Informing effective low-cost mechanisms by testing more than half a million vaccine uptake communications</center></h3>
+      <h3><center>Informed effective low-cost mechanisms by testing more than half a million vaccine uptake communications</center></h3>
       <br/>
      <p><center><img src="{{ '/assets/img/icons/example3.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
     </div>
     <div class="usa-width-one-fourth">
-      <h3><center>Text reminders increased college enrollment by 6%</center></h3>
+      <h3><center>Showed how text reminders increased college enrollment by 6%</center></h3>
       <br/><br/>
       <p><center><img src="{{ '/assets/img/icons/example4.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
     </div>
