--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,7 +33,7 @@ layout: base
      <p><center><img src="{{ '/assets/img/icons/example3.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
     </div>
     <div class="usa-width-one-fourth">
-      <h3><center>Showed how text reminders increased college enrollment by 6%</center></h3>
+      <h3><center>Showed text reminders could increase college enrollment by 6%</center></h3>
       <br/><br/>
       <p><center><img src="{{ '/assets/img/icons/example4.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
     </div>
