--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,7 +54,7 @@ layout: base
 {% assign featuredprojects = (site.projects | where: "featured" , "homepage") %}
 {% if featuredprojects.size == 0 %}
 {% else %}
-<section class="usa-section featured background-light">
+<section class="usa-section background-brand-dark">
   <div class="usa-grid">
       <h2>Featured Projects</h2>
      <div class="project-container">
