--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
           <a href="{{ site.baseurl }}/about/">About</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}/approach/">Methods</a>
+          <a href="{{ site.baseurl }}/methods/">Methods</a>
         </li>
         <li>
           <a href="{{ site.baseurl }}/work/">Work</a>
