--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,15 +9,7 @@
       <form id="contact" action="{{ f.url }}">
         <h2>What's new at OES?</h2>
         <p>Sign up to receive updates on results released and opportunities to work with the team by filling out our interest form.</p>
-        {% for field in f.fields %}
-          {% unless field.type == 'hidden' %}
-            <label for="contact-{{ field.name }}">{{ field.label }}</label>
-          {% endunless %}
-          <input class="contact-input" id="contact-{{ field.name }}"
-            name="{{ field.name }}" type="{{ field.type }}"
-            {% if field.value %} value="{{ field.value }}" {% endif %}>
-        {% endfor %}
-          <input class="usa-button" type="submit" value="{{ f.button }}">
+          <input class="usa-button" href="{{f.url}}" type="submit" value="{{ f.button }}">
       </div>
       <div class="usa-width-one-third privacy-policy">
         {% if f.privacypolicy %}
