--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,8 @@ layout: base
 <section class="usa-section billboard">
     <div class="usa-media_block-body">
     <div class="billboard-message">
-      <h2><center>We're hiring a part-time Associate Fellow for our Methods Team.<a href="https://oes.gsa.gov/contact/">Learn more</a></center></h2>
+      <h2><center>We're hiring a part-time Associate Fellow for our Methods Team. 
+        <a href="https://oes.gsa.gov/contact/">Learn more</a></center></h2>
   </div>
 </section>
 <section class="usa-section background-light">
