--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,11 +15,14 @@ layout: base
   </div>
 </section>
 {% endif %}
-<section class="usa-section billboard">
-    <div class="usa-media_block-body">
-    <div class="billboard-message">
-      <h2><center>We're hiring a part-time Associate Fellow for our Methods Team. 
-        <a href="https://oes.gsa.gov/contact/">Learn more</a></center></h2>
+<section class="usa-section background-brand-dark">
+  <div class="usa-grid main-content">
+     <div class= "usa-grid" align="center">
+       <p>    </p>
+    <div class="usa-width-one-half">
+      <div class="videoWrapper">
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/9KSQ3YLpuV4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+       </div>   
   </div>
 </section>
 <section class="usa-section background-light">
