--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,12 +15,11 @@ layout: base
   </div>
 </section>
 {% endif %}
-<section class="usa-section background-brand-dark">
+<section class="usa-section background-white">
   <div class="usa-grid main-content">
      <div class= "usa-grid" align="center">
-       <p>    </p>
       <div class="videoWrapper">
-       <iframe width="580" height="360" src="https://www.youtube.com/embed/9KSQ3YLpuV4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+       <iframe width="570" height="350" src="https://www.youtube.com/embed/9KSQ3YLpuV4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
        </div>   
   </div>
 </section>
