--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,6 +21,9 @@
         <li>
           <a href="{{ site.baseurl }}/team/">Team</a>
         </li>
+         <li>
+          <a href="{{ site.baseurl }}/team/">Events</a>
+        </li>
         <li>
           <a href="{{ site.baseurl }}/contact/">Contact</a>
         </li>
