--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
           <a href="{{ site.baseurl }}/team/">Team</a>
         </li>
          <li>
-          <a href="{{ site.baseurl }}/team/">Events</a>
+          <a href="{{ site.baseurl }}/events/">Events</a>
         </li>
         <li>
           <a href="{{ site.baseurl }}/contact/">Contact</a>
