--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -28,7 +28,7 @@ scripts:
     <div class="usa-media_block-img team-image" style="background-image: url({{ team.image | prepend: site.baseurl }});" role="image" aria-label="{{ team.name }}"></div>
     <div class="usa-media_block-body">
       <h3>
-        <a href="{{ site.baseurl }}{{ team.url }}">
+        <a href="{{ site.baseurl }}{{ team.url }}" class="link__team-member">
           {{ team.name }}
         </a>
       </h3>
