change text style for intro text

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@ layout: base
 <hr />
 <section class="usa-section background-tint">
   <div class="usa-grid main-content">
-    <div class="usa-grid usa-prose">
+    <div class="usa-grid usa-font-lead">
       <p>{{ page.what-is-oes }}</p>
     </div>
   </div>
