refactor modal markup & styles out of JS

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -37,3 +37,8 @@ scripts:
   </div>
 {% endfor %}
 </div>
+
+<div id="modal-overlay" class="modal-overlay"></div>
+<div id="modal-inner" class="modal-inner">
+  <div id="bio"></div>
+</div>
