add close button

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -40,5 +40,6 @@ scripts:
 
 <div id="modal-overlay" class="modal-overlay"></div>
 <div id="modal-inner" class="modal-inner">
+  <button id="close-modal" class="close-modal" aria-label="close">✕</button>
   <div id="bio"></div>
 </div>
