move focus to modal when visible

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -40,7 +40,7 @@ scripts:
 </div>
 
 <div id="modal-overlay" class="modal-overlay"></div>
-<div id="modal-inner" class="modal-inner">
+<div id="modal-inner" class="modal-inner" tabindex="-1">
   <button id="close-modal" class="close-modal" aria-label="close">✕</button>
   <div id="bio"></div>
 </div>
