--- a/_layouts/methods.html
+++ b/_layouts/methods.html
@@ -38,7 +38,7 @@ layout: base
     <center><img src="{{ '/assets/img/icons/2.png' | prepend: site.baseurl }}" height="100" width="100"></center>
     </div>
     <div class="usa-width-three-fourths">
-      <h3>Step 2: Translate evidence-based insights into concrete recommendations</h3>
+      <h3>Step 2: Translate behavioral insights into concrete recommendations</h3>
       <p>Our collaborators, who are civil servants with years of experience working to deliver programs across the government, are experts on how their programs work and often have the best ideas for how to improve them. OES team members support their efforts by bringing diverse academic and applied expertise to more deeply understand program bottlenecks and offer recommendations drawn from peer-reviewed evidence in the social and behavioral sciences.</p>
       <p><a href="{{ '/assets/files/ProjectDesign2019.pdf' | prepend: site.baseurl }}">Project Design Document</a></p>
     </div>
@@ -49,10 +49,10 @@ layout: base
     <center><img src="{{ '/assets/img/icons/3.png' | prepend: site.baseurl }}" height="100" width="100"></center>
     </div>
     <div class="usa-width-three-fourths">
-      <h3>Step 3: Embed tests using randomized evaluations</h3>
+      <h3>Step 3: Embed evaluations</h3>
         <p>"Tests" to OES are opportunities to truly learn what works - and are grounded in scientific methods.</p> 
             <p>- Whenever possible, we aim to <a href="https://oes.gsa.gov/methodsdetail/#randomization-code-review">randomly assign</a> individuals or groups to a treatment condition (the evidence-based program change). This is what enables us to conclude that improvements in outcomes were actually caused by the program change(s) that we tested.</p> 
-            <p>- In designing tests, we give particular attention to <a href="https://oes.gsa.gov/methodsdetail/#statistical-power">statistical power</a>. Briefly, statistical power is a test’s ability to correctly detect that a program change was effective (assuming that it was indeed effective).</p> 
+            <p>- In designing evaluations, we give particular attention to <a href="https://oes.gsa.gov/methodsdetail/#statistical-power">statistical power</a>. Briefly, statistical power is a test’s ability to correctly detect that a program change was effective (assuming that it was indeed effective).</p> 
             <p>- Finally, one of the most important steps we take is committing to a detailed <a href="https://oes.gsa.gov/methodsdetail/#analysis-plans">analysis plan</a> before we begin working with the data. As the recent replication crisis in the social sciences has shown, if scientists allow themselves too much flexibility in analyzing data they may get results that are not reliable but instead reflect inadvertent “fishing” or “p-hacking.”</p> 
         <p><a href="{{ '/assets/files/AnalysisPlan2019.pdf' | prepend: site.baseurl }}">Analysis Plan Document</a></p>
    </div>
