--- a/_layouts/methods.html
+++ b/_layouts/methods.html
@@ -64,7 +64,7 @@ layout: base
     </div>
     <div class="usa-width-three-fourths">
       <h3>Step 4: Analyze results utilizing existing administrative data</h3>
-      <p>OES team members work with agency collaborators to leverage existing data to measure the effect of a program change on a priority outcome of interest. As OES seeks to embed tests into ongoing operations, new data collections are generally not an option as they can be costly, time-intensive, and can require extensive approval processes. However, administrative data collected by government entities offer rich information that is often underutilized.</p>
+      <p>OES team members work with agency collaborators to leverage existing data to measure the effect of a program change on a priority outcome of interest. As OES seeks to embed evaluations into ongoing operations, new data collections are generally not an option as they can be costly, time-intensive, and can require extensive approval processes. However, administrative data collected by government entities offer rich information that is often underutilized.</p>
      <p><a href="{{ '/assets/files/RecordAnalysis2019.pdf' | prepend: site.baseurl }}">Record of Analysis Document</a></p>
     </div>
   </div>
@@ -86,7 +86,7 @@ layout: base
     </div>
     <div class="usa-width-three-fourths">
       <h3>Step 6: Measure impact and build evidence to continuously improve</h3>
-      <p>As part of our commitment to transparency and learning, OES shares findings from every completed test. This helps ensure Federal collaborators can learn what works and, just as importantly, what does not. Results which are surprising or run counter to our expectations are just as important to share and often offer valuable lessons. Our first priority is producing materials that enable decision makers to quickly digest results and understand their implications in a policy relevant time-frame. We produce a number of project summary documents - from high-level summaries, to one-page abstracts, to presentations - that our agency collaborators can use to circulate among their program teams, peers, and leadership, to facilitate learning and evidence-based policy making.</p>
+      <p>As part of our commitment to transparency and learning, OES shares findings from every completed evaluations. This helps ensure Federal collaborators can learn what works and, just as importantly, what does not. Results which are surprising or run counter to our expectations are just as important to share and often offer valuable lessons. Our first priority is producing materials that enable decision makers to quickly digest results and understand their implications in a policy relevant time-frame. We produce a number of project summary documents - from high-level summaries, to one-page abstracts, to presentations - that our agency collaborators can use to circulate among their program teams, peers, and leadership, to facilitate learning and evidence-based policy making.</p>
      <p><a href="{{ '/assets/files/Abstract.pdf' | prepend: site.baseurl }}">Abstract Document</a></p>
     </div>
   </div>
