--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,5 @@
 ---
-layout: base
+layout: default
 ---
 
 {% assign hero = page.hero %}
@@ -20,7 +20,7 @@ layout: base
      <div class= "usa-grid" align="center">
       <div class="videoWrapper">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/T_Vk4gwCs58" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-       </div>   
+       </div>
   </div>
 </section>
 <section class="usa-section background-light">
@@ -45,7 +45,7 @@ layout: base
         <h3><center><a href="https://oes.gsa.gov/projects/reducing-summer-melt/">Showed text message reminders could increase college enrollment by 6%</a></center></h3>
         <br/><br/>
         <p><center><img src="{{ '/assets/img/icons/example4.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
-      </div>     
+      </div>
     </div>
     {% if page.content-button-link %}
       <center>
@@ -54,7 +54,7 @@ layout: base
     {% endif %}
     </div>
   </section>
-{% assign featuredprojects = (site.projects | where: "featured" , "homepage") %}
+{% assign featuredprojects = site.projects | where: "featured" , "homepage" %}
 {% if featuredprojects.size == 0 %}
 {% else %}
 <section class="usa-section featured background-light">
