Add project secondary colors

--- a/_sass/theme/_uswds-theme-color.scss
+++ b/_sass/theme/_uswds-theme-color.scss
@@ -46,14 +46,14 @@ $theme-color-primary-darker:        'blue-warm-80v';
 $theme-color-primary-darkest:       false;
 
 // Secondary colors
-$theme-color-secondary-family:      'red';
+$theme-color-secondary-family:      'mint-cool';
 $theme-color-secondary-lightest:    false;
-$theme-color-secondary-lighter:     'red-cool-10';
-$theme-color-secondary-light:       'red-30';
-$theme-color-secondary:             'red-50';
-$theme-color-secondary-vivid:       'red-cool-50v';
-$theme-color-secondary-dark:        'red-60v';
-$theme-color-secondary-darker:      'red-70v';
+$theme-color-secondary-lighter:     'cyan-5';
+$theme-color-secondary-light:       'mint-cool-30';
+$theme-color-secondary:             'mint-cool-50';
+$theme-color-secondary-vivid:       'mint-cool-40v';
+$theme-color-secondary-dark:        'mint-cool-60';
+$theme-color-secondary-darker:      'mint-cool-70';
 $theme-color-secondary-darkest:     false;
 
 // Accent warm colors
