--- a/_sass/theme/_uswds-theme-components.scss
+++ b/_sass/theme/_uswds-theme-components.scss
@@ -57,7 +57,7 @@ $theme-header-max-width:              'desktop';
 $theme-header-min-width:              'desktop';
 
 // Hero
-$theme-hero-image:                    '../img/hero.png';
+$theme-hero-image:                    '../img/kites.jpg';
 
 // Navigation
 $theme-navigation-font-family:        'ui';
