--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -59,7 +59,7 @@ layout: base
     </div>
     {% if page.content-button-link %}
       <div class="margin-top-4 text-center">
-        <a href="{{ page.content-button-link | prepend: site.baseurl }}" class="usa-button usa-button--big bg-secondary-dark hover:bg-secondary-darker">{{ page.content-button-text }}</a>
+        <a href="{{ page.content-button-link | prepend: site.baseurl }}" class="usa-button usa-button--big bg-primary-dark hover:bg-secondary-darker">{{ page.content-button-text }}</a>
       </div>
     {% endif %}
   </div>
