--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -2,23 +2,23 @@
 @import "core/typography";
 
 // Components --------- //
-@import "components/billboard";
-@import "components/card";
-@import "components/contact";
-@import "components/filter";
-@import "components/footer";
+//@import "components/billboard";
+//@import "components/card";
+//@import "components/contact";
+//@import "components/filter";
+//@import "components/footer";
 @import "components/hero";
-@import "components/layout";
-@import "components/filter";
-@import "components/logo";
-@import "components/navigation";
-@import "components/project-single";
-@import "components/wrapper";
+//@import "components/layout";
+//@import "components/filter";
+//@import "components/logo";
+//@import "components/navigation";
+//@import "components/project-single";
+//@import "components/wrapper";
 
 
 // Pages --------- //
-@import "pages/projects";
-@import "pages/team";
+//@import "pages/projects";
+//@import "pages/team";
 
 // Custom ------------ //
 @import "custom";
