--- a/_sass/theme/_uswds-theme-color.scss
+++ b/_sass/theme/_uswds-theme-color.scss
@@ -48,32 +48,32 @@ $theme-color-primary-darkest:       false;
 // Secondary colors
 $theme-color-secondary-family:      'mint-cool';
 $theme-color-secondary-lightest:    false;
-$theme-color-secondary-lighter:     'cyan-5';
+$theme-color-secondary-lighter:     'mint-cool-5';
 $theme-color-secondary-light:       'mint-cool-30';
-$theme-color-secondary:             'mint-cool-50';
-$theme-color-secondary-vivid:       'mint-cool-40v';
-$theme-color-secondary-dark:        'mint-cool-60';
-$theme-color-secondary-darker:      'mint-cool-70';
+$theme-color-secondary:             'mint-cool-60';
+$theme-color-secondary-vivid:       'mint-cool-30v';
+$theme-color-secondary-dark:        'mint-cool-70';
+$theme-color-secondary-darker:      'mint-cool-80';
 $theme-color-secondary-darkest:     false;
 
 // Accent warm colors
 $theme-color-accent-warm-family:    'orange';
 $theme-color-accent-warm-lightest:  false;
-$theme-color-accent-warm-lighter:   'orange-10';
-$theme-color-accent-warm-light:     'orange-20v';
-$theme-color-accent-warm:           'orange-30v';
-$theme-color-accent-warm-dark:      'orange-50v';
-$theme-color-accent-warm-darker:    'orange-60';
+$theme-color-accent-warm-lighter:   'white';
+$theme-color-accent-warm-light:     'white';
+$theme-color-accent-warm:           'white';
+$theme-color-accent-warm-dark:      'white';
+$theme-color-accent-warm-darker:    'white';
 $theme-color-accent-warm-darkest:   false;
 
 // Accent cool colors
 $theme-color-accent-cool-family:    'blue-cool';
 $theme-color-accent-cool-lightest:  false;
-$theme-color-accent-cool-lighter:   'blue-cool-5v';
-$theme-color-accent-cool-light:     'blue-cool-20v';
-$theme-color-accent-cool:           'cyan-30v';
-$theme-color-accent-cool-dark:      'blue-cool-40v';
-$theme-color-accent-cool-darker:    'blue-cool-60v';
+$theme-color-accent-cool-lighter:   'white';
+$theme-color-accent-cool-light:     'white';
+$theme-color-accent-cool:           'blue-60v';
+$theme-color-accent-cool-dark:      'white';
+$theme-color-accent-cool-darker:    'white';
 $theme-color-accent-cool-darkest:   false;
 
 /*
