--- a/_sass/theme/_uswds-theme-typography.scss
+++ b/_sass/theme/_uswds-theme-typography.scss
@@ -167,7 +167,7 @@ $theme-font-type-lang:  false;
 $theme-font-type-mono:  'roboto-mono';
 
 // sans-serif
-$theme-font-type-sans:  'source-sans-pro';
+$theme-font-type-sans:  'helvetica';
 
 // serif
 $theme-font-type-serif: 'merriweather';
@@ -284,10 +284,10 @@ tokens.
 */
 
 $theme-font-role-ui:        'sans';
-$theme-font-role-heading:   'serif';
-$theme-font-role-body:      'sans';
+$theme-font-role-heading:   'sans';
+$theme-font-role-body:      'serif';
 $theme-font-role-code:      'mono';
-$theme-font-role-alt:       'serif';
+$theme-font-role-alt:       'sans';
 
 /*
 ----------------------------------------
@@ -325,7 +325,7 @@ $theme-font-weight-normal:        400;
 $theme-font-weight-medium:        false;
 $theme-font-weight-semibold:      false;
 $theme-font-weight-bold:          700;
-$theme-font-weight-heavy:         false;
+$theme-font-weight-heavy:         900;
 
 // If USWDS is generating your @font-face rules,
 // should we generate all available weights
