--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,4 +18,4 @@ $logo-url: "{{ site.baseurl }}{{ site.logo }}";
 
 @import 'core/variables';
 @import 'uswds/uswds';
-//@import 'all';
+@import 'all';
