Reorg files to use v2 structure

--- a/_sass/custom/all.scss
+++ b/_sass/custom/all.scss
@@ -1,4 +1,5 @@
 // Core --------- //
+@import "core/variables";
 @import "core/typography";
 
 // Components --------- //
@@ -15,10 +16,6 @@
 //@import "components/project-single";
 //@import "components/wrapper";
 
-
 // Pages --------- //
 //@import "pages/projects";
 //@import "pages/team";
-
-// Custom ------------ //
-@import "custom";
