--- a/_sass/custom/all.scss
+++ b/_sass/custom/all.scss
@@ -1,21 +1,21 @@
 // Core --------- //
-@import "../core/variables";
-@import "../core/typography";
+@import "core/variables";
+@import "core/typography";
 
 // Components --------- //
-//@import "../components/billboard";
-//@import "../components/card";
-//@import "../components/contact";
-//@import "../components/filter";
-//@import "../components/footer";
-@import "../components/hero";
-//@import "../components/layout";
-//@import "../components/filter";
-//@import "../components/logo";
-//@import "../components/navigation";
-//@import "../components/project-single";
-//@import "../components/wrapper";
+//@import "components/billboard";
+//@import "components/card";
+//@import "components/contact";
+//@import "components/filter";
+//@import "components/footer";
+@import "components/hero";
+//@import "components/layout";
+//@import "components/filter";
+@import "components/logo";
+@import "components/navigation";
+//@import "components/project-single";
+//@import "components/wrapper";
 
 // Pages --------- //
-//@import "../pages/projects";
-//@import "../pages/team";
+//@import "pages/projects";
+//@import "pages/team";
