Add global content styles

--- a/_sass/settings/_uswds-theme-typography.scss
+++ b/_sass/settings/_uswds-theme-typography.scss
@@ -67,7 +67,7 @@ unclassed elements:
 
 $theme-global-paragraph-styles: false;
 $theme-global-link-styles:      false;
-$theme-global-content-styles:   false;
+$theme-global-content-styles:   true;
 
 /*
 ----------------------------------------
