--- a/_sass/custom/_uswds-theme-custom-styles.scss
+++ b/_sass/custom/_uswds-theme-custom-styles.scss
@@ -25,6 +25,17 @@ Custom project SASS goes here.
   display: block;
 }
 
+.site-callout {
+  padding-bottom: units(6);
+
+  @include at-media('tablet-lg') {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+  }
+}
+
 // uswds shims
 .usa-banner,
 .usa-nav {
