Add wrapper styles

--- a/_sass/custom/all.scss
+++ b/_sass/custom/all.scss
@@ -14,7 +14,7 @@
 @import "components/logo";
 @import "components/navigation";
 //@import "components/project-single";
-//@import "components/wrapper";
+@import "components/wrapper";
 
 // Pages --------- //
 //@import "pages/projects";
