--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@ layout: base
 <section class="usa-section">
   <div class="grid-container">
     <div class="grid-row flex-justify-center">
-      <div class="videoWrapper grid-col flex-auto">
+      <div class="videoWrapper grid-col flex-auto width-full">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/T_Vk4gwCs58" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
