--- a/_sass/custom/all.scss
+++ b/_sass/custom/all.scss
@@ -5,9 +5,9 @@
 // Components --------- //
 //@import "components/billboard";
 @import "components/card";
-//@import "components/contact";
+@import "components/contact";
 //@import "components/filter";
-//@import "components/footer";
+@import "components/footer";
 @import "components/hero";
 @import "components/layout";
 //@import "components/filter";
