--- a/_layouts/methods.html
+++ b/_layouts/methods.html
@@ -28,7 +28,7 @@ layout: base
           src="{{ '/assets/img/icons/1.png' | prepend: site.baseurl }}"
           class="display-block margin-x-auto square-15">
       </div>
-      <div class="tablet:grid-col">
+      <div class="tablet:grid-col usa-prose">
         <h3>Step 1: Partner with Federal Agencies to target priority outcomes</h3>
         <p>In conversations with collaborators, we discuss the most important questions that need to be answered in order to improve program implementation and performance, and define a meaningful outcome at the start. Agencies maintain priorities through their Congressional Justifications, Annual Performance Plans, Strategic Plans, Agency Priority Goals, Cross-Agency Priority Goals, Learning Agendas, and many other planning efforts. Each project is vetted for feasibility and potential impact on a key priority in a Federal program or policy.</p>
         <p><a href="{{ '/assets/files/ProjectInitiation2019.pdf' | prepend: site.baseurl }}">Project Initiation Document</a></p>
@@ -43,7 +43,7 @@ layout: base
           src="{{ '/assets/img/icons/2.png' | prepend: site.baseurl }}"
           class="display-block margin-x-auto square-15">
       </div>
-      <div class="usa-width-three-fourths">
+      <div class="tablet:grid-col usa-prose">
         <h3>Step 2: Translate behavioral insights into concrete recommendations</h3>
         <p>Our collaborators, who are civil servants with years of experience working to deliver programs across the government, are experts on how their programs work and often have the best ideas for how to improve them. OES team members support their efforts by bringing diverse academic and applied expertise to more deeply understand program bottlenecks and offer recommendations drawn from peer-reviewed evidence in the social and behavioral sciences.</p>
         <p><a href="{{ '/assets/files/ProjectDesign2019.pdf' | prepend: site.baseurl }}">Project Design Document</a></p>
@@ -57,7 +57,7 @@ layout: base
           src="{{ '/assets/img/icons/3.png' | prepend: site.baseurl }}"
           class="display-block margin-x-auto square-15">
       </div>
-      <div class="usa-width-three-fourths">
+      <div class="tablet:grid-col usa-prose">
         <h3>Step 3: Embed evaluations</h3>
           <p>"Tests" to OES are opportunities to truly learn what works - and are grounded in scientific methods.</p>
             <ul>
@@ -76,7 +76,7 @@ layout: base
           src="{{ '/assets/img/icons/4.png' | prepend: site.baseurl }}"
           class="display-block margin-x-auto square-15">
       </div>
-      <div class="usa-width-three-fourths">
+      <div class="tablet:grid-col usa-prose">
         <h3>Step 4: Analyze results utilizing existing administrative data</h3>
         <p>OES team members work with agency collaborators to leverage existing data to measure the effect of a program change on a priority outcome of interest. As OES seeks to embed evaluations into ongoing operations, new data collections are generally not an option as they can be costly, time-intensive, and can require extensive approval processes. However, administrative data collected by government entities offer rich information that is often underutilized.</p>
       <p><a href="{{ '/assets/files/RecordAnalysis2019.pdf' | prepend: site.baseurl }}">Record of Analysis Document</a></p>
@@ -90,7 +90,7 @@ layout: base
           src="{{ '/assets/img/icons/5.png' | prepend: site.baseurl }}"
           class="display-block margin-x-auto square-15">
       </div>
-      <div class="usa-width-three-fourths">
+      <div class="tablet:grid-col usa-prose">
         <h3>Step 5: Ensure our work meets evaluation best practice</h3>
         <p>In keeping with our team’s commitment to reproducibility, before we finalize an analysis, we conduct an internal replication that we call Reanalysis. An independent reanalyst — an analyst who does not know the results of the initial analysis  — writes new code to analyze the administrative data and independently generate results that address the study’s research objectives. Reanalysis serves as a check on (1) the computer code that the first analyst used to analyze the data, (2) any exploratory analyses that might have been conducted, and (3) any departures from the Analysis Plan that might have been necessary due to unanticipated features of the data. The reanalyst’s goal is to replicate the initial analysis from scratch, working only from the raw data and the Analysis Plan. Discrepancies between the analyses are resolved through careful discussion, generating a more reliable outcome.</p>
       <p><a href="{{ '/assets/files/RecordReanalysis2019.pdf' | prepend: site.baseurl }}">Record of Reanalysis Document</a></p>
@@ -104,7 +104,7 @@ layout: base
           src="{{ '/assets/img/icons/6.png' | prepend: site.baseurl }}"
           class="display-block margin-x-auto square-15">
       </div>
-      <div class="usa-width-three-fourths">
+      <div class="tablet:grid-col usa-prose">
         <h3>Step 6: Measure impact and build evidence to continuously improve</h3>
         <p>As part of our commitment to transparency and learning, OES shares findings from every completed evaluations. This helps ensure Federal collaborators can learn what works and, just as importantly, what does not. Results which are surprising or run counter to our expectations are just as important to share and often offer valuable lessons. Our first priority is producing materials that enable decision makers to quickly digest results and understand their implications in a policy relevant time-frame. We produce a number of project summary documents - from high-level summaries, to one-page abstracts, to presentations - that our agency collaborators can use to circulate among their program teams, peers, and leadership, to facilitate learning and evidence-based policy making.</p>
       <p><a href="{{ '/assets/files/Abstract.pdf' | prepend: site.baseurl }}">Abstract Document</a></p>
